--- a/alertmanager/alertmanager.yml
+++ b/alertmanager/alertmanager.yml
@@ -2,10 +2,17 @@ global:
   resolve_timeout: 5m
 
 route:
-  receiver: 'local-webhook'
+  group_by: ['alertname']
+  group_wait: 10s
+  group_interval: 5m
+  repeat_interval:1h
+  receiver: 'email'
 
 receivers:
-  - name: 'local-webhook'
-    webhook_configs:
-      - url: 'http://localhost:9093/alert'
-        send_resolved: true
+  - name: 'email'
+    email_configs:
+      - to: 'email@example.com'
+        from: 'alertamanager@example.com'
+        smarthost: 'smtp.gmail.com:587'
+        auth_username: 'your_mail@example.com'
+        auth_password: '${auth_passwrd}'
