--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
-      - "9091:9090"  # Expose Prometheus on port 9091
+      - "9090:9090"  # Expose Prometheus on port 9091
     command:
       - "--config.file=/etc/prometheus/prometheus.yml"
     restart: unless-stopped
@@ -15,15 +15,15 @@ services:
       - monitoring
 
   alertmanager:
-    image: alertmanager:latest
+    image: prom/alertmanager:latest
     container_name: alertmanager
     volumes:
       - ./alertmanager/alertmanager.yml:/etc/alertmanager/alertmanager.yml
     ports:
-      - "9093:9093"  
+      - "9093:9093"
     command:
       - "--config.file=/etc/alertmanager/alertmanager.yml"
-    restart: unless-stopped  
+    restart: unless-stopped
     networks:
       - monitoring
 
@@ -31,22 +31,22 @@ services:
     build: .
     container_name: Nodejs-Prometheus-Docker
     ports:
-      - "3000:3000"
+      - "5000:5000"
     restart: unless-stopped
     networks:
       - monitoring
 
   node-exporter:
-    image: node-exporter:latest
+    image: prom/node-exporter:latest
     container_name: node-exporter
     ports:
-      - "9100:9100"  # Standard Node Exporter port
+      - "9100:9100"
     restart: unless-stopped
     networks:
       - monitoring
 
   cadvisor:
-    image: cadvisor:latest
+    image: google/cadvisor:latest
     container_name: cadvisor
     ports:
       - "8081:8081"
@@ -59,5 +59,30 @@ services:
     networks:
       - monitoring
 
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    environment:
+      - GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
+      - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
+    volumes:
+      - ./grafana:/var/lib/grafana
+    ports:
+      - "3000:3000"
+    networks:
+      - monitoring
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx-proxy
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/.htpasswd:/etc/nginx/.htpasswd
+    ports:
+      - "80:80"
+    networks:
+      - monitoring
+
 networks:
   monitoring:
+    driver: bridge
