--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,5 +1,5 @@
 global:
-  scrape_interval: 15s
+  scrape_interval: 15s  # How frequently to scrape targets
 
 scrape_configs:
   - job_name: 'prometheus'
@@ -17,3 +17,11 @@ scrape_configs:
   - job_name: 'webapp'
     static_configs:
       - targets: ['webapp:5000']
+
+alerting:
+  alertmanagers:
+    - static_configs:
+        - targets: ['alertmanager:9093']
+
+rule_files:
+  - 'alertmanager.yml'  # Points to your alerting rules file
